Initial POC of Thunderbird Extension sending an e-mail to TriliumNext At this point, POC has not removed any of the existing functionality and still requires Obsidian to successfully finish execution.
There are also new options in the configuration for the extension that accept values for the ETAPI token. TriliumNext needs to be open to be open to receive the e-mail.

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -269,7 +269,23 @@
   <form>
   
     
-  
+    <hr>
+    <h1>Hello World</h1>
+    <p>To connect to your Trilium database, enter the URL below.
+    <form>
+      <label><br><b>Trilium URL:</b></label>
+      <input type="text" id="triliumdb">
+      <button id="submit-triliumdb">Save</button>
+      <button id="default-triliumdb">Restore Default</button>
+    </form> 
+  <hr>
+  <p>ETAPI Token for Authenticating to Trilium. (Required)
+    <form>
+      <label><b>ETAPI Token:</b></label>
+      <input type="text" id="triliumToken">
+      <button id="submit-triliumToken">Save</button>
+      <button id="default-triliumToken">Restore Default</button>
+    </form> 
   <hr>
   <h1>Color Coded Note Tags (Optional Feature)</h1>
   <p>The _MSGTAGSLIST placeholder described above tells the add-on
