ParentNoteId Configuration Support Added ability to configure the ParentNoteId from the options and use that value when creating a note from the e-mail. Included the error checking for when the ParentNodeId does not exist.
Also added plumbing to use the stored settings for the Trilium URI and token, moving where the variables are set to the top of clip(), where the rest of the stored configuration values are set.

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -287,6 +287,15 @@
       <button id="default-triliumToken">Restore Default</button>
     </form> 
   <hr>
+  <p>Parent Note Id of where the note will be sent
+    <form>
+      <label><b>ParentNoteId:</b></label>
+      <input type="text" id="parentNoteId">
+      <button id="submit-parentNoteId">Save</button>
+      <button id="default-parentNoteId">Restore Default</button>
+    </form> 
+  <hr>
+
   <h1>Color Coded Note Tags (Optional Feature)</h1>
   <p>The _MSGTAGSLIST placeholder described above tells the add-on
   to insert any category tags that are attached to the clipped email by Thuderbird
