--- a/source/options/options.html
+++ b/source/options/options.html
@@ -25,7 +25,7 @@
     To generate an ETAPI token, you need to open TriliumNext and click on the TriliumNext icon in the upper left corner. 
     Then click 'Options' -> 'ETAPI' -> 'Create New ETAPI Token'. After the token is created, store it below.
     <form>
-      <label><b>ETAPI Token for Authenticating to Trilium.:</b></label>
+      <label><b>ETAPI Token for Authenticating to Trilium:</b></label>
       <input type="text" id="triliumToken">
       <button id="submit-triliumToken">Save</button>
       <button id="default-triliumToken">Restore Default</button>
